Fix width on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -186,8 +186,8 @@ form { transform: translate(-50%,-50%) }
 	top: 470px;
 	margin-bottom: 50px
 }
-@media (max-width: 411px)
+@media (max-width: 420px)
 {
-	.main-container { width: 80% }
+	.main-container { width: 90% }
 	.helper1 { font-size: 1.2em !important }
 }
